# cost-calculator

./: .gitignore  Makefile  README.md  a.py  example.py  pyproject.toml  setup.py
cost-calculator/: applications.py  cli.py
cost_calculator/: BOM_fill_prg.py  __init__.py  applications.py  bom.py  categories.py  cli.py  cost.py  cost_table.py  costtable_to_fca.py  fca.py  fca_to_bom.py  supplement.py
example/: Brake System.xlsx  BrakeSystem_BOM.xlsx
example/cost_table_files/: tblFasteners_2020J_v11.0.xlsx  tblMaterials_2020J_v12.0.xlsx  tblProcessMultipliers_2020J_v2.0.xlsx  tblProcesses_2020J_v12.0.xlsx  tblTooling_2020J_v10.1.xlsx
example/fca_files/: 015_Kyoto University_FSAEJ_CR_FCA_BR-A1010-AA.xlsx  015_Kyoto University_FSAEJ_CR_FCA_BR-A1020.xlsx  015_Kyoto University_FSAEJ_CR_FCA_BR-A1040.xlsx  015_Kyoto University_FSAEJ_CR_FCA_BR-A1050 (1).xlsx  015_Kyoto University_FSAEJ_CR_FCA_BR-A1050.xlsx  015_KyotoUniversity_FSAEJ_CR_FCA_BR-A1060.xlsx  015_KyotoUniversity_FSAEJ_CR_FCA_BR-A1070.xlsx  015_KyotoUniversity_FSAEJ_CR_FCA_BR-A1080.xlsx
example/fca_files_empty/: 015_Kyoto University_FSAEJ_CR_FCA_BR-A1020.xlsx  015_Kyoto University_FSAEJ_CR_FCA_BR-A1040.xlsx  015_Kyoto University_FSAEJ_CR_FCA_BR-A1050.xlsx  015_KyotoUniversity_FSAEJ_CR_FCA_BR-A1060.xlsx  015_KyotoUniversity_FSAEJ_CR_FCA_BR-A1070.xlsx
