[tool.poetry]
name = "cost_calculator"
version = "0.1.0"
description = "Python 3 library for Cost Calculation."
authors = ["ORyomei <o.ryomei1020@gmail.com>"]
repository = "https://github.com/KART-Software/cost-calculator"
keywords = ["FSAE", "FSAEJ", "KART", "Cost", "Formula 1"]

[tool.poetry.dependencies]
python = "^3.7.0"
openpyxl = "3.0.7"
"pdfminer.six" = "^20201018"

[tool.poetry.dev-dependencies]
yapf = "0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cost_calculator = "cost_calculator.cli:main"